# esp-idf-smtp

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla-assistant.yml  dependabot-auto-merge.yml  release.yml
src/: client.rs  config.rs  email.rs  error.rs  esp_transport.rs  lib.rs  mock_transport.rs  protocol.rs  response.rs  transport.rs
tests/: email_test.rs  protocol_test.rs  response_test.rs
