[package]
name = "esp-idf-smtp"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Lightweight SMTP client over esp_tls for esp-idf-svc in Rust"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/esp-idf-smtp"
keywords = ["esp-idf", "esp32", "smtp", "email", "embedded"]
categories = ["embedded", "email"]
readme = "README.md"

[features]
default = ["esp-idf"]
esp-idf = ["dep:esp-idf-svc"]

[dependencies]
base64 = "0.22"
log = "0.4"
thiserror = "2"

# ESP-IDF dependencies (feature-gated)
esp-idf-svc = { version = "0.52", default-features = false, optional = true }
