[package]
name = "esp-idf-smtp"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
description = "Lightweight SMTP client over esp_tls for esp-idf-svc in Rust"
license = "Apache-2.0"
repository = "https://github.com/nightwatch-astro/esp-idf-smtp"
keywords = ["esp-idf", "esp32", "smtp", "email", "embedded"]
categories = ["embedded", "email"]
readme = "README.md"

[features]
default = ["esp-idf"]
esp-idf = ["dep:esp-idf-svc"]

[dependencies]
base64 = "0.22"
log = "0.4"
thiserror = "2"

# ESP-IDF dependencies (feature-gated)
esp-idf-svc = { version = "0.52", default-features = false, optional = true }

[lints.clippy]
# Lint groups (lower priority so individual overrides win)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Restriction lints for embedded library safety
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "warn"
mem_forget = "warn"

# Transitive dependency version conflicts (not fixable by this crate)
multiple_crate_versions = "allow"
